# internal/domain/response/get-answer-by-team-by-id.go
@@ -1,9 +1,12 @@
 package response
 
-type GetMediaTask struct {
+type GetAnswerByTeamByID struct {
 	Id          int    `json:"id"`
 	Title       string `json:"title"`
 	Description string `json:"description"`
 	Points      int    `json:"points"`
+	Status      string `json:"status"`
+	Comment     string `json:"comment"`
 	VideoUrl    string `json:"video_url"`
+	PhotoUrl    string `json:"photo_url"`
 }
